[OSGi] Tests not running yet.